# python-flask-server-generated/swagger_server/swagger/swagger.yaml
@@ -23,27 +23,6 @@ paths:
       summary: List books with pagination
       operationId: books_get
       parameters:
-      - name: offset
-        in: query
-        description: Offset for pagination (starting from 0)
-        required: false
-        style: form
-        explode: true
-        schema:
-          minimum: 0
-          type: integer
-          default: 0
-      - name: limit
-        in: query
-        description: Number of items per page
-        required: false
-        style: form
-        explode: true
-        schema:
-          maximum: 100
-          minimum: 1
-          type: integer
-          default: 10
       - name: page
         in: query
         description: Page number for pagination
@@ -453,8 +432,6 @@ components:
     inline_response_200:
       type: object
       properties:
-        offset:
-          type: integer
         limit:
           type: integer
         total:
@@ -474,7 +451,6 @@ components:
           perPage: 20
           totalPages: 10
           page: 1
-        offset: 0
         _links: null
         limit: 6
         items:
@@ -534,29 +510,6 @@ components:
           type: string
           description: "Status of the copy (e.g., available, checked out)"
   parameters:
-    Offset:
-      name: offset
-      in: query
-      description: Offset for pagination (starting from 0)
-      required: false
-      style: form
-      explode: true
-      schema:
-        minimum: 0
-        type: integer
-        default: 0
-    Limit:
-      name: limit
-      in: query
-      description: Number of items per page
-      required: false
-      style: form
-      explode: true
-      schema:
-        maximum: 100
-        minimum: 1
-        type: integer
-        default: 10
     PageParam:
       name: page
       in: query
